@@ -1,3 +1,9 @@
+2010-02-01  Kai Tietz  <kai.tietz@onevision.com>
+
+	Donated by S. Koehler
+	* winusbio.h: New API.
+	* winusb.h: New API.
+
 2010-01-20  Ozkan Sezer  <sezeroz@gmail.com>
 
 	* commctrl.h: Relaxed _WIN32_IE version requirement to 0x0500
